add container initialization apis
